--- a/README.html
+++ b/README.html
@@ -1,1 +1,10 @@
-"# cs50-web-app" 
+<!DOCTYPE html>
+<html>
+    <head>
+    html simple page
+    </head>
+    <body>
+    simple page
+    simple page's second line
+    </body>
+</html>
